# klibrarian

./: .gitignore  Cargo.toml  README.md  build.rs  config.toml.example  package-lock.json  package.json
.github/workflows/: ci.yml
frontend/: package.json  tsconfig.app.json  vite.config.ts
frontend/src/: main.ts
frontend/src/components/: InviteAdd.vue
frontend/src/composables/: use-auth.ts
frontend/src/pages/: [...catchall].vue  admin.vue  index.vue  invite.vue
frontend/src/types/: components.d.ts  imports.d.ts  invites.ts  router.d.ts
src/: config.rs  database.rs  invitee.rs  komga.rs  main.rs  navidrome.rs
src/routes/: auth.rs  invite.rs  middleware.rs  mod.rs
