[package]
name = "k-librarian"
version = "0.2.0"
edition = "2024"
build = "build.rs"
rust-version = "1.88.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
axum = {version = "0.8.4", features = ["tracing", "query", "json"]}
dotenv = "0.15.0"
reqwest = {version = "0.12.22", features = ["json"]}
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.142"
tokio = {version = "1.47.1", features = ["full"]}
tower-http = {version = "0.6.6", features = ["cors", "trace", "fs"]}
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.19", features = ["env-filter"]}
uuid = {version = "1.17.0", features = ["v4", "fast-rng"]}
urlencoding = "2.1.3"
redis = {version = "0.32.4", features = ["aio", "tokio-comp"]}
chrono = "0.4.41"
garde = {version = "0.22.0", features = ["derive", "email", "email-idna", "serde"]}

[profile.ci]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
