[package]
name = "k-librarian"
version = "0.3.0"
edition = "2024"
rust-version = "1.88.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# General
anyhow = "1"
base64 = "0.22.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }
uuid = { version = "1.18.0", features = ["v4", "fast-rng", "serde"] }
urlencoding = "2.1.3"
garde = { version = "0.22.0", features = ["derive", "email", "email-idna", "serde"] }
toml = { version = "0.9.5", default-features = false, features = ["std", "parse", "serde"] }
thiserror = "2.0.14"

# Web server
axum = { version = "0.8.4", features = ["tracing", "query", "json"] }
tower-http = { version = "0.6.6", features = ["cors", "trace", "fs"] }
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.20", features = ["env-filter"]}

# HTTPs
reqwest = { version = "0.12.23", features = ["json"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "uuid", "macros"] }

[profile.production]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
